--- a/assets/styles.css
+++ b/assets/styles.css
@@ -280,7 +280,8 @@ header .info .right-area .my-mail {
 }
 .custom-btn span {
   color: #fff;
-  display: block;
+  display: inline-block;
+  vertical-align: middle;
   position: absolute;
   top: 0;
   left: 0;
