--- a/assets/styles.css
+++ b/assets/styles.css
@@ -438,8 +438,8 @@ header .info .right-area .my-mail {
   border-radius: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
+  /* -webkit-filter: grayscale(100%);
+          filter: grayscale(100%); */
 }
 
 .intro .information > li {
