--- a/assets/styles.css
+++ b/assets/styles.css
@@ -503,8 +503,10 @@ header .info .right-area .my-mail {
   position: relative;
   border: 1px solid #e7e7e7;
   border-bottom: 0;
+  background-color: #fff;
   background-size: cover;
   background-position: left top;
+  background-repeat: no-repeat;
   width: 100%;
   height: 250px;
   margin-bottom: 3rem;
