--- a/assets/styles.css
+++ b/assets/styles.css
@@ -238,9 +238,9 @@ header {
 header .heading-wrapper {
   border-radius: 5px;
   padding: 30px 40px 20px;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.2)), to(rgba(0, 0, 0, 0.2))), url("../imgs/web-design.jpg");
-  background: -o-linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../imgs/web-design.jpg");
-  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../imgs/web-design.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.2)), to(rgba(0, 0, 0, 0.2))), url("../imgs/web-design.avif");
+  background: -o-linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../imgs/web-design.avif");
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../imgs/web-design.avif");
   background-color: #454546;
   background-size: cover;
   background-blend-mode: multiply;
@@ -336,9 +336,9 @@ header .info .right-area .my-mail {
 .intro-section {
   position: relative;
   padding-top: 250px;
-  background: -webkit-gradient(linear ,left top, left bottom ,from(rgba(255,255,255,.5)), to(rgba(0,0,0,.4))), url("../imgs/web-design.jpg");
-  background: -o-linear-gradient(top ,rgba(255,255,255,.5), rgba(0,0,0,.4)), url("../imgs/web-design.jpg");
-  background: linear-gradient(to bottom ,rgba(255,255,255,.5), rgba(0,0,0,.4)), url("../imgs/web-design.jpg");
+  background: -webkit-gradient(linear ,left top, left bottom ,from(rgba(255,255,255,.5)), to(rgba(0,0,0,.4))), url("../imgs/web-design.avif");
+  background: -o-linear-gradient(top ,rgba(255,255,255,.5), rgba(0,0,0,.4)), url("../imgs/web-design.avif");
+  background: linear-gradient(to bottom ,rgba(255,255,255,.5), rgba(0,0,0,.4)), url("../imgs/web-design.avif");
   background-size: cover;
   background-position: bottom;
 }
@@ -589,7 +589,7 @@ header .info .right-area .my-mail {
 .counter-section {
   position: relative;
   padding: 100px 0;
-  background-image: url("../imgs/web-design.jpg");
+  background-image: url("../imgs/web-design.avif");
   background-size: cover;
   background-position: bottom;
   z-index: 1;
