--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,6 +1,4 @@
-
-
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Montserrat:300,400&display=swap");
 
 /* ---------------------------------
 1. COMMONS FOR PAGE DESIGN
@@ -12,12 +10,12 @@ html {
   margin: 0px;
   padding: 0px;
   -ms-touch-action: manipulation;
-      touch-action: manipulation;
+  touch-action: manipulation;
 }
 
 body {
   font-size: 16px;
-  font-family: "Poppins", serif;
+  font-family: "Montserrat", sans-serif;
   width: 100%;
   height: 100%;
   margin: 0;
@@ -52,11 +50,6 @@ h5,
 h6 {
   line-height: 1.5;
   font-weight: inherit;
-}
-
-h2,
-h3 {
-  font-family: "Poppins", cursive;
 }
 
 p {
@@ -177,8 +170,8 @@ span {
 }
 .scroll-to-top.show:hover img {
   -webkit-transform: rotate(0);
-      -ms-transform: rotate(0);
-          transform: rotate(0);
+  -ms-transform: rotate(0);
+  transform: rotate(0);
 }
 .scroll-to-top.show:hover:after {
   opacity: 0;
@@ -195,8 +188,15 @@ span {
   margin-left: 0.1rem;
   border-radius: 10px;
   -webkit-filter: blur(0.1rem);
-          filter: blur(0.1rem);
-  background: -webkit-gradient(linear, left top, right top, from(transparent), color-stop(#3b3b3b), to(transparent));
+  filter: blur(0.1rem);
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(transparent),
+    color-stop(#3b3b3b),
+    to(transparent)
+  );
   background: -o-linear-gradient(left, transparent, #3b3b3b, transparent);
   background: linear-gradient(to right, transparent, #3b3b3b, transparent);
   -webkit-transition: all 0.2s linear;
@@ -208,15 +208,15 @@ span {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 
   border-radius: 15px;
   -webkit-transform: rotate(-11deg);
-      -ms-transform: rotate(-11deg);
-          transform: rotate(-11deg);
+  -ms-transform: rotate(-11deg);
+  transform: rotate(-11deg);
   -webkit-transform-origin: bottom left;
-      -ms-transform-origin: bottom left;
-          transform-origin: bottom left;
+  -ms-transform-origin: bottom left;
+  transform-origin: bottom left;
   -webkit-transition: all 0.2s linear;
   -o-transition: all 0.2s linear;
   transition: all 0.2s linear;
@@ -238,9 +238,18 @@ header {
 header .heading-wrapper {
   border-radius: 5px;
   padding: 30px 40px 20px;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.2)), to(rgba(0, 0, 0, 0.2))), url("../imgs/web-design.avif");
-  background: -o-linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../imgs/web-design.avif");
-  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../imgs/web-design.avif");
+  background: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      from(rgba(0, 0, 0, 0.2)),
+      to(rgba(0, 0, 0, 0.2))
+    ),
+    url("../imgs/web-design.avif");
+  background: -o-linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url("../imgs/web-design.avif");
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url("../imgs/web-design.avif");
   background-color: #454546;
   background-size: cover;
   background-blend-mode: multiply;
@@ -249,16 +258,15 @@ header .heading-wrapper {
 
 header .info {
   margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 header .info .icon {
-  float: left;
   font-size: 30px;
 }
 
-header .info .right-area {
-  margin-left: 45px;
-}
 header .info .right-area .my-mail {
   font-size: 0.8rem;
 }
@@ -274,7 +282,7 @@ header .info .right-area .my-mail {
   float: right;
   margin-top: 30px;
   -webkit-box-shadow: 0 0px 4px rgba(0, 0, 0, 0.3);
-          box-shadow: 0 0px 4px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0px 4px rgba(0, 0, 0, 0.3);
   background: #242424;
   overflow: hidden;
 }
@@ -285,7 +293,6 @@ header .info .right-area .my-mail {
   position: absolute;
   top: 0;
   left: 0;
-  font-family: 'Montserrat', sans-serif;
 
   width: 100%;
   height: 100%;
@@ -323,10 +330,10 @@ header .info .right-area .my-mail {
 .custom-btn:hover:after {
   transform: rotateX(0) skewY(0);
   top: 0;
-} 
+}
 .custom-btn:hover:before {
   top: 0;
-  transition-delay: .26s;
+  transition-delay: 0.26s;
 }
 
 /* ---------------------------------
@@ -336,9 +343,26 @@ header .info .right-area .my-mail {
 .intro-section {
   position: relative;
   padding-top: 250px;
-  background: -webkit-gradient(linear ,left top, left bottom ,from(rgba(255,255,255,.5)), to(rgba(0,0,0,.4))), url("../imgs/web-design.avif");
-  background: -o-linear-gradient(top ,rgba(255,255,255,.5), rgba(0,0,0,.4)), url("../imgs/web-design.avif");
-  background: linear-gradient(to bottom ,rgba(255,255,255,.5), rgba(0,0,0,.4)), url("../imgs/web-design.avif");
+  background: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      from(rgba(255, 255, 255, 0.5)),
+      to(rgba(0, 0, 0, 0.4))
+    ),
+    url("../imgs/web-design.avif");
+  background: -o-linear-gradient(
+      top,
+      rgba(255, 255, 255, 0.5),
+      rgba(0, 0, 0, 0.4)
+    ),
+    url("../imgs/web-design.avif");
+  background: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.5),
+      rgba(0, 0, 0, 0.4)
+    ),
+    url("../imgs/web-design.avif");
   background-size: cover;
   background-position: bottom;
 }
@@ -372,8 +396,10 @@ header .info .right-area .my-mail {
   margin-top: 100px;
   text-align: center;
   background: #fff;
-  -webkit-box-shadow: 10px 10px 80px rgba(0, 0, 0, 0.1), -10px -10px 80px -20px rgba(0, 0, 0, 0.1);
-          box-shadow: 10px 10px 80px rgba(0, 0, 0, 0.1), -10px -10px 80px -20px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 10px 10px 80px rgba(0, 0, 0, 0.1),
+    -10px -10px 80px -20px rgba(0, 0, 0, 0.1);
+  box-shadow: 10px 10px 80px rgba(0, 0, 0, 0.1),
+    -10px -10px 80px -20px rgba(0, 0, 0, 0.1);
 }
 
 .intro h1 {
@@ -404,8 +430,8 @@ header .info .right-area .my-mail {
   width: 50%;
   height: 100%;
   -webkit-transform: rotate(3deg);
-      -ms-transform: rotate(3deg);
-          transform: rotate(3deg);
+  -ms-transform: rotate(3deg);
+  transform: rotate(3deg);
   z-index: -1;
 }
 
@@ -417,8 +443,10 @@ header .info .right-area .my-mail {
 }
 
 .intro .profile-img {
-  -webkit-box-shadow: 10px 10px 80px rgba(0, 0, 0, 0.1), -10px -10px 80px -20px rgba(0, 0, 0, 0.1);
-          box-shadow: 10px 10px 80px rgba(0, 0, 0, 0.1), -10px -10px 80px -20px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 10px 10px 80px rgba(0, 0, 0, 0.1),
+    -10px -10px 80px -20px rgba(0, 0, 0, 0.1);
+  box-shadow: 10px 10px 80px rgba(0, 0, 0, 0.1),
+    -10px -10px 80px -20px rgba(0, 0, 0, 0.1);
   display: block;
   height: 200px;
   width: 200px;
@@ -437,14 +465,9 @@ header .info .right-area .my-mail {
   height: 100%;
   border-radius: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   /* -webkit-filter: grayscale(100%);
           filter: grayscale(100%); */
-}
-
-.intro .information > li {
-  display: block;
-  margin: 5px 0;
 }
 
 .social-icons > li > a {
@@ -480,13 +503,13 @@ header .info .right-area .my-mail {
   transition: all 0.2s ease;
   -webkit-transform: scale(0);
   -ms-transform: scale(0);
-      transform: scale(0);
+  transform: scale(0);
 }
 
 .social-icons > li > a:hover:after {
   -webkit-transform: scale(1);
   -ms-transform: scale(1);
-      transform: scale(1);
+  transform: scale(1);
 }
 
 /* ---------------------------------
@@ -526,15 +549,15 @@ header .info .right-area .my-mail {
   max-width: 300px;
   background: transparent;
   -webkit-box-shadow: 0 15px 10px #777;
-          box-shadow: 0 15px 10px #777;
+  box-shadow: 0 15px 10px #777;
   -webkit-transform: rotate(-5deg);
-      -ms-transform: rotate(-5deg);
-          transform: rotate(-5deg);
+  -ms-transform: rotate(-5deg);
+  transform: rotate(-5deg);
 }
 .portfolio-section .my-work .fluidbox__wrap:after {
   -webkit-transform: rotate(5deg);
-      -ms-transform: rotate(5deg);
-          transform: rotate(5deg);
+  -ms-transform: rotate(5deg);
+  transform: rotate(5deg);
   right: 10px;
   left: auto;
 }
@@ -561,7 +584,6 @@ header .info .right-area .my-mail {
 .about-section .box .chart {
   position: relative;
   font-size: 1.2rem;
-  font-family: 'Montserrat', sans-serif;
   font-weight: 300;
   width: 100%;
   margin: auto;
@@ -572,7 +594,6 @@ header .info .right-area .my-mail {
 }
 
 .about-section h6.label {
-  font-family: 'Montserrat', sans-serif;
   font-weight: 300;
 }
 
@@ -609,13 +630,11 @@ header .info .right-area .my-mail {
 
 .counter-section .counter .title {
   font-weight: 300;
-  font-family: 'Montserrat', sans-serif;
   color: #f39c12;
 }
 
 .counter-section .counter .desc {
   font-weight: 300;
-  font-family: 'Montserrat', sans-serif;
 }
 
 .counter-section .img {
@@ -627,7 +646,7 @@ header .info .right-area .my-mail {
 .counter-section .img img {
   width: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 @media (max-width: 775px) {
@@ -652,7 +671,7 @@ footer .shape-footer {
 }
 
 footer .shape-footer:after {
-  content: '';
+  content: "";
   position: absolute;
   left: -1rem;
   top: 0;
@@ -663,8 +682,7 @@ footer .shape-footer:after {
 }
 
 footer .copyright {
-  font-size: .9rem;
-  font-family: 'Montserrat', sans-serif;
+  font-size: 0.9rem;
   font-weight: 300;
 }
 
@@ -694,8 +712,8 @@ footer .social-icons {
   }
   footer .social-icons li a:after {
     -webkit-transform: scale(1);
-        -ms-transform: scale(1);
-            transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
   }
 }
 
@@ -713,21 +731,20 @@ footer .social-icons li a {
   color: #fff;
 }
 
-
 /* SCROLL ANIMATION STUFF */
 
 .animated {
   -webkit-animation-duration: 1s;
-          animation-duration: 1s;
+  animation-duration: 1s;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 
 /* FADE IN LEFT */
 
 .fadeIn {
   -webkit-animation-name: fadeIn;
-          animation-name: fadeIn;
+  animation-name: fadeIn;
 }
 @-webkit-keyframes fadeIn {
   0% {
@@ -750,30 +767,30 @@ footer .social-icons li a {
 
 .fadeInLeft {
   -webkit-animation-name: fadeInLeft;
-          animation-name: fadeInLeft;
+  animation-name: fadeInLeft;
 }
 @-webkit-keyframes fadeInLeft {
   0% {
     opacity: 0;
     -webkit-transform: translateX(-40px);
-            transform: translateX(-40px);
+    transform: translateX(-40px);
   }
   100% {
     opacity: 1;
     -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
 }
 @keyframes fadeInLeft {
   0% {
     opacity: 0;
     -webkit-transform: translateX(-40px);
-            transform: translateX(-40px);
+    transform: translateX(-40px);
   }
   100% {
     opacity: 1;
     -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
 }
 
@@ -781,30 +798,30 @@ footer .social-icons li a {
 
 .fadeInRight {
   -webkit-animation-name: fadeInRight;
-          animation-name: fadeInRight;
+  animation-name: fadeInRight;
 }
 @-webkit-keyframes fadeInRight {
   0% {
     opacity: 0;
     -webkit-transform: translateX(40px);
-            transform: translateX(40px);
+    transform: translateX(40px);
   }
   100% {
     opacity: 1;
     -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
 }
 @keyframes fadeInRight {
   0% {
     opacity: 0;
     -webkit-transform: translateX(40px);
-            transform: translateX(40px);
+    transform: translateX(40px);
   }
   100% {
     opacity: 1;
     -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
 }
 
@@ -812,30 +829,30 @@ footer .social-icons li a {
 
 .fadeInUp {
   -webkit-animation-name: fadeInUp;
-          animation-name: fadeInUp;
+  animation-name: fadeInUp;
 }
 @-webkit-keyframes fadeInUp {
   0% {
     opacity: 0;
     -webkit-transform: translateY(40px);
-            transform: translateY(40px);
+    transform: translateY(40px);
   }
   100% {
     opacity: 1;
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
   }
 }
 @keyframes fadeInUp {
   0% {
     opacity: 0;
     -webkit-transform: translateY(40px);
-            transform: translateY(40px);
+    transform: translateY(40px);
   }
   100% {
     opacity: 1;
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
   }
 }
 
@@ -843,30 +860,30 @@ footer .social-icons li a {
 
 .fadeInDown {
   -webkit-animation-name: fadeInDown;
-          animation-name: fadeInDown;
+  animation-name: fadeInDown;
 }
 @-webkit-keyframes fadeInDown {
   0% {
     opacity: 0;
     -webkit-transform: translateY(-40px);
-            transform: translateY(-40px);
+    transform: translateY(-40px);
   }
   100% {
     opacity: 1;
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
   }
 }
 @keyframes fadeInDown {
   0% {
     opacity: 0;
     -webkit-transform: translateY(-40px);
-            transform: translateY(-40px);
+    transform: translateY(-40px);
   }
   100% {
     opacity: 1;
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
   }
 }
 
@@ -874,31 +891,31 @@ footer .social-icons li a {
 
 .rollIn {
   -webkit-animation-name: rollIn;
-          animation-name: rollIn;
+  animation-name: rollIn;
 }
 @-webkit-keyframes rollIn {
   from {
     opacity: 0;
     -webkit-transform: translate3d(-100%, 0, 0) rotate3d(0, 0, 1, -120deg);
-            transform: translate3d(-100%, 0, 0) rotate3d(0, 0, 1, -120deg);
+    transform: translate3d(-100%, 0, 0) rotate3d(0, 0, 1, -120deg);
   }
 
   to {
     opacity: 1;
     -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
   }
 }
 @keyframes rollIn {
   from {
     opacity: 0;
     -webkit-transform: translate3d(-100%, 0, 0) rotate3d(0, 0, 1, -120deg);
-            transform: translate3d(-100%, 0, 0) rotate3d(0, 0, 1, -120deg);
+    transform: translate3d(-100%, 0, 0) rotate3d(0, 0, 1, -120deg);
   }
 
   to {
     opacity: 1;
     -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
   }
 }
