--- a/assets/styles.css
+++ b/assets/styles.css
@@ -102,7 +102,6 @@ img {
 
 li {
   list-style: none;
-  display: inline-block;
 }
 
 span {
@@ -470,17 +469,24 @@ header .info .right-area .my-mail {
           filter: grayscale(100%); */
 }
 
+.social-icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
 .social-icons > li > a {
-  height: 45px;
-  line-height: 45px;
-  width: 45px;
-  border-radius: 50%;
-  border: 1px solid #e0e0e0;
-  overflow: hidden;
-  z-index: 1;
+  display: inline-grid;
+  place-items: center;
   position: relative;
-  margin: 0 5px 5px;
-  background: #fff;
+  z-index: 1;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 1px solid #e0e0e0;
+  background-color: #fff;
   color: #f39c12;
 }
 
